# hello-agent

./: README.md  pyproject.toml
src/hello_agent/: __init__.py  cli.py  config.py  ollama_setup.py
src/hello_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
